apps/media/unpackerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  labels:
    app: unpackerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: unpackerr
        image: golift/unpackerr:latest
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 128Mi
            cpu: 100m
        volumeMounts:
        - name: media
          mountPath: /data
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
