apps/media/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - jellyfin
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 7878
          name: http
        resources:
          limits:
            memory: 1Gi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: 100m
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
spec:
  ports:
  - port: 7878
    targetPort: 7878
    name: http
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: radarr.home.romangzz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-service
            port:
              number: 7878
