apps/media/whisper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      containers:
      - name: whisper
        image: onerahmet/openai-whisper-asr-webservice:latest
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9000
          name: http
        resources:
          limits:
            memory: 2Gi
            cpu: "2"
          requests:
            memory: 512Mi
            cpu: 250m
        volumeMounts:
        - name: model-cache
          mountPath: /cache
      volumes:
      - name: model-cache
        persistentVolumeClaim:
          claimName: whisper-model-cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: whisper-service
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  selector:
    app: whisper
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: whisper.home.romangzz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisper-service
            port:
              number: 9000
